--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,30 @@ dl {
 
 }
 
+.details-dl {
+  /* background-color: black */
+  /* color: white; */
+  font-size: 1.2em;
+  justify-content: left;
+  width: 80%;
+  min-width: 0;
+  margin: auto;
+  padding: 0.5em 1em;
+  border-radius: 10px;
+}
+
+.details-dl dt {
+  color: var(--primary-green);
+}
+
+.details-dl dd {
+  /* background-color: black; */
+  background-color: lightgray;
+  /* color: white; */
+  padding: 0.5em 1em;
+  border-radius: 10px;
+}
+
 .ref-container {
   background-color: revert;
   margin-bottom: 2em;
