create (from template_second_page.html), hook-up and populate divide.html

--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,13 @@ article:last-of-type {
   margin-bottom: 0.5em;
 }
 
+.white_on_black {
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 0 .1em;
+}
+
 @media screen and (min-width:450px) {
 
   .small-view {
