--- a/html/templates/details_note_template.html
+++ b/html/templates/details_note_template.html
@@ -1,5 +1,5 @@
 <!--ususally inserted before details-console end tag-->
 <dl class="details-dl">
-    <dt>Note</dt>
-    <dd>INSERT TEXT</dd>
+    <dt>Note
+    <dd>INSERT TEXT
 </dl>
